...
            self.alertView!.heightAnchor.constraint(equalToConstant: self.alertView!.bounds.size.width).isActive = true
        }
    }

    func presentErrorAlert(message: String, buttonTitle: String) {
        present(alertView: AlertView(style: .alert), setup: {
            $0.accessibilityIdentifier = "ErrorAlertView"
            $0.message = message
            $0.confirmButton.setTitle(buttonTitle, for: .normal)
            $0.confirmButton.backgroundColor = .spartanRed
            $0.onConfirm {
                self.dismissAlertView()
            }
...
